# vipdopt

./: .flake8  .gitattributes  .gitignore  .readthedocs.yaml  LICENSE.md  LICENSE.txt  README.md  SonyBayerFilter.py  SonyBayerFilterConversion.py  SonyBayerFilterOptimization.py  SonyBayerFilterParameters.py  __init__.py  all_requirements.txt  build_requirements.txt  config.yml.example  conftest.py  dev_requirements.txt  device.py  environment.yml  filter.py  gaussRefract.py  jinja.sh  kkr.py  lastEpIter.txt  layering.py  linter_requirements.txt  lumerical_fdtd_help.txt  lumerical_help.txt  main.py  main_v1.py  mpitest.py  nlopt_test.py  optimization.py  pyproject.toml  readLastEpIter.py  run_lumapi_tests.sh  run_mpi_tests.sh  run_proc.sh  run_sweep.sh  run_tests.sh  (+15 more)
.github/actions/: python-setup_cache.yml
.github/actions/python-setup/: action.yml
.github/workflows/: ci.yml  lint.yml  linux.yml  macos.yml  mpi.yml  mypy.yml  test_coverage.yml  windows.yml
check_gradient_test/: CheckGradientParameters.py  CheckGradientSweep.py  optimization.fsp  sweep_settings.json
check_gradient_test/ares_mode_overlap_fom_check_gradient/: cur_design.npy  cur_design_variable.npy
configs/: SonyBayerFilterParameters.py  SonyBayerFilterParameters_sony.py  __init__.py  cfg_to_params.py  dict_to_globals_metacode.py  global_params.py  test_config.yaml  test_config_sony.yaml  yaml_to_params.py
correlation_test/: SonyBayerFilter.py  SonyBayerFilterConversion.py  SonyBayerFilterParameters.py  compare_gradients.py  compare_gradients_by_focalspot.py  figure_of_merit_by_wl.npy  intensity_fom_by_wavelength.npy  mode_overlap_fom_by_wavelength.npy  transmission_by_focal_spot.npy  transmission_by_focal_spot_by_wl.npy
correlation_test/angInc_sony_test_fom_correlation/: SonyBayerFilterConversion.py  SonyBayerFilterParameters.py  adjoint_job_0_0_0.fsp  adjoint_job_0_1_0.fsp  adjoint_job_1_0_0.fsp  adjoint_job_1_1_0.fsp  adjoint_job_2_0_0.fsp  adjoint_job_2_1_0.fsp  adjoint_job_3_0_0.fsp  adjoint_job_3_1_0.fsp  average_design_change_evolution.npy  cur_design.npy  cur_design_variable.npy  device_gradient.npy  forward_job_0_0.fsp  forward_job_1_0.fsp  intensity_fom_by_focal_spot_by_wl.npy  max_design_change_evolution.npy  mode_overlap_fom_by_focal_spot_by_wl.npy  step_size_evolution.npy  transmission_by_wl.npy
docs/notebooks/: config.ipynb  device.ipynb  fom.ipynb  simulation.ipynb
docs/source/: conf.py  index.rst  installation.rst  notebooks.rst  usage.rst
docs/source/_autosummary/: vipdopt.rst  (+23 more)
evaluation/: LumProcParameters.py  LumProcParameters_sony.py  LumProcSweep.py  LumProcSweep_sony.py  __init__.py  plot_everything_all.py  plot_perfdiag.py  plotter.py  plotter_v0.py  readLastEpIter.py  slurm_lumproc.sh  sweep_settings.json  sweep_settings_sony.json
evaluation/cfg/: LumProcParameters.py  __init__.py  cfg_to_params_sony.py  sweep_settings.json  test_config_sony.yaml
executor/: __init__.py
gradient_test/: CheckGradientParameters.py  CheckGradientSweep.py  slurm_mwir.sh  sweep_settings.json
gradient_test/ares_mode_overlap_fom_check_gradient/: cur_design.npy  cur_design_variable.npy  density_eval.npy  design_gradient.npy  device_gradient.npy
jinja_templates/: derived_simulation_properties.j2  derived_simulation_properties_old.j2  mesh_properties.jinja  simulation_template.j2  simulation_template_2d.j2
lum_proc/: LayeredMWIRBridgesBayerFilterParameters.py  LumProcParameters.py  LumProcSweep.py  SonyBayerFilterParameters.py  optimization.fsp  save_state.bak  save_state.dir  slurm_mwir.sh  sweep_settings.json
lum_proc/configs/: LumProcParameters.py  SonyBayerFilterParameters.py  SonyBayerFilterParameters_sony.py  __init__.py  dict_to_globals_metacode.py  global_params.py  test_config_sony.yaml
lum_proc/utils/: SonyBayerFilter.py  __init__.py  device.py  square_blur.py  utility.py
runs/: param_config_array.py
runs/test_project/: processed_config.yaml  sim.json
runs/test_run/: config.json  config_example_2d.yml  config_example_3d.yml  processed_config.yml  sim.json
runs/uniform_project/: config.json  processed_config.yaml
scripts/: run_sim.sh  run_sweep.sh  slurm_vipdopt.sh  update_config.sh
test_project/: config.json
testing/: __init__.py  mpitest.py  utils.py
testing/monitor_data/: sim_focal_monitor_0.npz  sim_transmission_monitor_0.npz
tests/: conftest.py  test_config.py  test_device.py  test_filter.py  test_fom.py  test_gradient.py  test_import_and_run.py  test_manager.py  test_monitor.py  test_pool.py  test_project.py  test_sigmoid.py  test_simulation.py  test_template.py  test_utils.py  utils.py
uniform_project/: config.json
utils/: EnvironmentConstructor.py  Filter.py  FoM.py  LumericalUtils.py  Optimization.py  SonyBayerFilter.py  Source.py  WorkloadManager.py  __init__.py  device.py  filter.py  layering.py  lum_utils.py  manager.py  nia_Optimization.py  run_proc.sh  scale.py  sigmoid.py  sigmoid_3_level.py  square_blur.py  square_blur_smooth.py  utility.py
vipdopt/: GDS.py  STL.py  __init__.py  __main__ v1.py  __main__.py  __main__hj.py  __main__v0.py  device.py  file_executor.py  filter.py  lumerical.cfg  manager.py  monitor.py  mpi_exe_template.sh  pool.py  pool2.py  project.py  server.py  simulation.py  source.py  submit.sh  submit_job.py  utils.py  waiter.py
vipdopt/config/: __init__.py
vipdopt/configuration/: README.md  __init__.py  config.py  config_example.yml  config_example_2d.yml  projc.py  render.py  sbc.py  sbf.py  template.py
vipdopt/eval/: ParameterHandler.py  __init__.py  evaluation.py  plotter.py  plotter_v2.py
vipdopt/gui/: __init__.py  config_editor.py  dashboard.ui  fom_dialog.ui  main.py  main_window.ui  run_gui.py  settings.py  settings.ui  status.py  status.ui  ui_dashboard.py  ui_fom_dialog.py  ui_fom_dialog.ui  ui_settings.py  ui_status.py
vipdopt/mpi/: __init__.py  pool.py  server.py
vipdopt/optimization/: __init__.py  adam.py  device.py  filter.py  fom.py  hookejeeves.py  multilevelsigmoid.py  optimization.py  optimizer.py
vipdopt/simulation/: __init__.py  fdtd.py  monitor.py  simobject.py  simulation.py  source.py
(+28 files in other folders)
